Added 16 new endpoints.  Improved chart endpoint to handle rows with missing values.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,22 @@
 
 S3method(print,iex_api)
 export(daily_stats)
+export(iex_api)
+export(iex_chart)
+export(iex_company_info)
+export(iex_dividends)
+export(iex_earnings)
+export(iex_financials)
+export(iex_listed_symbols)
+export(iex_market_previous)
+export(iex_sector_performance)
+export(iex_splits)
+export(iex_stock_peers)
+export(iex_stock_previous)
+export(iex_stock_relevant)
+export(iex_stock_stats)
+export(iex_traded_symbols)
+export(iex_volume_by_venue)
 export(intraday_stats)
 export(last)
 export(market)
